--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://berlin880.github.io/portfile/", 
+{ "homepage": "https://berlin880.github.io/react-/", 
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
